fix z-index & hide arrows on sow slider

--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -5,3 +5,11 @@
 .panel-grid:first-child {
   padding-top: 0;
 }
+
+// siteorigin widget slider overrides
+.sow-slider-base ul.sow-slider-images li.sow-slider-image {
+  z-index: 1 !important; // don't cover profile menu/header
+}
+.sow-slider-base .sow-slide-nav {
+  display: none !important; // hide arrows on slider
+}
